changes in signup and signin

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2 class="mb-4 text-center">Featured Products</h2>
     <div class="row g-4">
       <div class="col-md-4">
-        <div class="card" style="width: 25rem; ">
+        <div class="card h-100">
           <img src="./images/Nzxt-H9-Elite-Mid-Tower-Cabinet.jpg" class="card-img-top mt-5" alt="...">
           <div class="card-body">
             <h5 class="card-title border-bottom mb-4"> Aurous Monster PC 3</h5>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card" style="width: 25rem;">
+        <div class="card h-100">
           <img src="./images/ad18cfc6-a3bb-4d4f-8661-fe521a50.jpg" class="card-img-top mt-2" alt="...">
           <div class="card-body">
             <h5 class="card-title border-bottom mb-2"> The Last of Us Remastered for PS4</h5>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="col-md-4">  
-        <div class="card" style="width: 25rem;">
+        <div class="card h-100">
           <img src="./images/4-2024-03-21T132646.405-1.jpg" class="card-img-top mt-5 mb-3" alt="...">
           <div class="card-body">
             <h5 class="card-title border-bottom mb-5"> Logitech G29 Driving Force </h5>
