--- a/order-summary.html
+++ b/order-summary.html
@@ -21,7 +21,7 @@
       <h5>Payment</h5>
       <select class="form-select">
         <option selected>Credit Card</option>
-        <option>Paypal</option>
+        <option>UPI</option>
       </select>
       <input type="text" class="form-control mt-2" placeholder="Card Number">
     </div>
