--- a/cart-summary.html
+++ b/cart-summary.html
@@ -5,8 +5,37 @@
   <title>Cart Summary </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
+
+
+<nav class="navbar navbar-expand-lg bg-tertiary border-bottom ">
+    <div class="container-fluid">
+      <a class="navbar-brand text-dark fw-bold fs-3" href="./index.html">PixelMart</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 nav1 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+
+          <li class="nav-item"><a class="nav-link text-light btn btn-outline-dark " href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-light btn btn-outline-dark " href="product-list.html">Products</a></li>
+          <li class="nav-item"><a class="nav-link text-light btn btn-outline-dark " href="signup.html">Sign Up</a></li>
+          <li class="nav-item"><a class="nav-link text-light btn btn-outline-dark " href="signin.html">Sign In</a></li>
+          <li class="nav-item"><a class="nav-link text-light btn btn-outline-dark " href="cart-summary.html"><i class="fa-solid fa-cart-shopping me-2"></i>Cart</a></li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-dark" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+
   <div class="container main-c ">
     <h2 class="mb-4">Cart Summary</h2>
     <table class="table align-middle">
@@ -31,7 +60,7 @@
     </table>
     <div class="d-flex justify-content-between align-items-center mt-4">
       <h4>Total:₹69,700.00 </h4>
-      <a href="order-summary.html" class="btn btn-success">Proceed to Checkout</a>
+      <a href="./signin 2.html" class="btn btn-success">Proceed to Checkout</a>
     </div>
   </div>
 </body>
