--- a/signin 2.html
+++ b/signin 2.html
@@ -12,21 +12,17 @@
 </head>
 
 <body>
-  <div class="container container2 rounded">
+  <div class=" container2 rounded">
     <div class="row justify-content-center">
 
-      <div class=" p-4 shadow">
+      <div class=" p-4 ">
         <h3 class="mb-3 text-center">Sign Up</h3>
         <form>
-          <div class="mb-3"><label class="form-label"></label><input type="text" class="form-control"
-              placeholder="Name"></div>
           <div class="mb-3"><label class="form-label"></label><input type="email" class="form-control "
               placeholder="Email"></div>
           <div class="mb-3"><label class="form-label"></label><input type="password" class="form-control"
               placeholder="Password"></div>
-          <div class="mb-3"><label class="form-label"></label><input type="password" class="form-control"
-              placeholder="Confirm Password"></div>
-          <a href="index.html" class="btn button1 mt-2 ">Create Account</a>
+          <a href="./order-summary.html" class="btn button1 ">Sign In</a>
 
           <h4 class="text-center mt-3">Or</h4>
 
@@ -35,11 +31,8 @@
             <span>Sign up with Google</span>
           </a>
 
-
-
-
         </form>
-        <p class="mt-3 mb-0 text-center">Already have an account? <a href="signin.html">Sign In</a></p>
+        <p class="mt-3 mb-0 text-center">Create an account? <a href="signup.html">Sign Up</a></p>
       </div>
 
     </div>
